--- a/HFC/WebHacking/apuntes/HFC25_09_2024.md
+++ b/HFC/WebHacking/apuntes/HFC25_09_2024.md
@@ -122,51 +122,58 @@ Podemos dividirla como:
 | **Parámetros**   | ?login=true       | Consiste en parejas de parametros y valores, usualmente con información útil para el servidor. Esta sección no siempre esta presente además de que es el servidor el que suele agregar estos parametros automáticamente. |
 | **Fragmentos**   | \#status          | Hacen referencia a secciones dentro del recurso solicitado y son interpretados directamente por nuestro navegador. Esta sección tampoco es obligatoria y también es gestionada por el servidor                           |
 
+---
+
+La comunicación *HTTP* consiste principalmente en una ***petición HTTP*** y una ***respuesta HTTP***.
+
+La **petición HTTP** es realizada por un cliente, por ejemplo un navegador o **cURL**, para despúes ser procesada por un servidor web.
+La **petición** contiene toda la información requerida por el servidor, desde la información proporcionada en la *URL* hasta otras opciones específicas del navegador o del contexto.
+
+Una vez que el servidor ha recibido y procesado la **petición**, responde con una **respuesta HTTP** que contiene un código de respuesta, el recurso solicitado y demás detalles necesarios como por ejemplo, *cookies*.
+
 ## Petición HTTP
 
-> Por detrás de una *URL*, se realiza una petición *HTTP* al servidor en el formato adecuado para que este lo entienda. Los componentes de esta son:
+> Como se mencionó, por detrás de una *URL*, se realiza una petición *HTTP* al servidor en el formato adecuado para que este lo entienda. Los componentes de esta son:
 
-- Método
-- Recurso
-- Versión del protocolo
-- Cabeceras
-- Salto de línea
-- Cuerpo
+- **Método**
+- **Recurso**
+- **Versión del protocolo**
+- **Cabeceras**: Pares tipo campo:valor con información útil para el servidor
+- **Salto de línea**
+- **Cuerpo**
 
-```
-GET /saluda.php?nombre=Virgilio&apellido=Castro HTTP/1.1
-Host: websec.center <- Aqui inicia la cabecera
+```bash
+# http://websec.center/saluda.php
+
+GET /saluda.php HTTP/1.1
+Host: websec.center
 User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv;109.0)
 Connection: close
 
 ```
 
-```
+```bash
+# POST a http://websec.center/login.php
+
 POST /login.php HTTP/1.1
-Host: websec.center <- Aqui inicia la cabecera
+Host: websec.center
 User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv;109.0)
 Connection: close
 
 user=admin&pass=123456
 ```
 
-#### Cabeceras de petición HTTP
-
-> Sirven a modo de metadatos de las peticiones, así como para configurar la comunicación.
-
-Algunas cabeceras comúnes son:
-
-- **Host**: Indica el nombre del servidor que se está conectando.
-- **User-Agent**: Indica la herramienta (generalmente navegador) con la que algún usuario generó la petición.
-- **Cookie**: Envia las *cookies*, que son datos almacenados en el navegador. Generalmente envía el identificador de la sesión.
+Al terminar la sección de **cabeceras**, obligatoriamente se espera un salto de línea (o línea vacía). Esto es totalmente necesario para validar la solicitud.
 
 ## Respuesta HTTP
 
-- Versión del protocolo
-- Código de respuesta
-- Cabeceras
-- Salto de línea
-- Cuerpo
+> Ya procesada la solicitud *HTTP*, se recibirá una respuesta con las siguientes componentes:
+
+- **Versión del protocolo**
+- **Código de respuesta**
+- **Cabeceras**
+- **Salto de línea**
+- **Cuerpo**
 
 ```
 HTTP/1.1 200 OK
@@ -181,15 +188,9 @@ Server: Apache/2.4.57 (Debian)
 ...
 ```
 
-#### Cabeceras de respuesta
+Los **códigos de respuesta** se utilizan para determinar de manera sencilla el estado de la solicitud.
 
-> Sirven a modo de metadatos de las respuestas, así como para configurar la comunicación.
-
-- *Date*: Fecha y hora en la que se proceso la petición y se envio la respuesta
-
-- Server: Servidor y versión del servidor en donde está alojada la aplicación
-
-- *Set-Cookie*: Cadena a almacenar en el navegador. Generalmente usada como identificador de sesión.
+El **cuerpo** de la respuesta, separado por el necesario salto de línea, es el recurso solicitado por la petición, ya sea un archivo *html*, *css*, *javascript*, imágenes, etc.
 
 ## Flujo HTTP
 
@@ -204,6 +205,10 @@ El siguiente diagrama entonces, hace referencia al primer contacto con un servid
 3. Con ese conocimiento, el cliente realiza una solicitud *HTTP* con la información de la *URL* al servidor con la dicha IP asignada.
 4. Entonces el servidor web, devuelve el recurso solicitado con un código de exito *200*.
 5. Finalmente, el navegador web renderiza la respuesta obtenida para ser recibida adecuadamente por el usuario.
+
+## Encabezados HTTP
+
+Antes mencionamos los **encabezados HTTP**
 
 # HTTPS
 
