HTTP completo HTB

--- a/HFC/WebHacking/apuntes/HFC25_09_2024.md
+++ b/HFC/WebHacking/apuntes/HFC25_09_2024.md
@@ -1,91 +1,4 @@
 [<- Índice](../WebHacking.md)
-# Anatomía de una aplicación web
-
-> Las aplicaciones web son aplicaciones interactivas mediante el protocolo *HTTP* que pretenden ofrecer funcionalidades y soluciones especificas para un grupo de usuarios.
-
-Dado que el protocolo *HTTP* es una comunicación modelo cliente-servidor, tiene 2 componentes principales.
-
-### Client-side (Frontend)
-
-Toda la interfaz del usuario
-
-- *HTML* - Estructura
-- *CSS* - Estilo
-- *Javascript* - Dinamismo
-
-Clientes más comunes:
-
-- Navegadores web
-- Bots/*Scripts*
-- Cualquier cosa que pueda realizar peticiones *HTTP*
-
-### Server-side (Backend)
-
-El grueso de la implementación de la aplicación.
-
-Servidores web comunes:
-- Apache
-- Nginx
-- IIS
-
-**Lenguajes comunes**:
-
-- *PHP*
-- *Java*
-- *Python*
-- *Javascript* (Sí, se puede implementar todo el *backend* con *Javascript*)
-
-**Frameworks y CMS**:
-
-- Angular (Enfocado a *Javascript*)
-- Django (Enfocado a *Python*)
-- Wordpress
-- Drupal
-
-### Otras consideraciones de arquitectura
-
-- CDNs: Hacer entrega de contenido estático (que casi nunca cambia)
-
-- Balanceadores de carga (Tienes varios servidores que se encargan de responder a peticiones)
-
-- *Proxies* inversos
-
-- *WAF*: Es *Web Application Firewall*, ayuda a limitar las comunicaciones, trabaja unicamente en la ==capa de aplicación== y detiene comunicaciones malintencionadas.
-
-### ¿Donde implementamos la seguridad *Frontend* o *Backend*?
-
-> Principalmente en el **Backend** pero nunca está de más implementar seguridad también en el *Frontend*.
-
-## Repaso: *HTML*, *CSS*, *JavaScript*
-
-### HTML
-
-- *Hypertext Markup Language*
-- Lenguaje de etiquetas o marcas
-- Estructura principal de la página
-- Utiliza etiquetas para señalizar el contenido
-- Normalmente hay un *CSS* y/o un *Javascript* dentro del *HTML*
-
-### CSS
-
-- Lenguaje de hoja de estilos
-- *Cascading Style Sheet*
-- Definir el estilo de la página
-- Utiliza selectores para señalizar el contenido
-- Hay veces que hay comentarios útiles, sin embargo no es nuestro principal objetivo de estudio
-
-### Javascript
-
-- Lenguaje de programación
-- Define la interactividad y el dinamismo de la página
-- Es Turing Completo y tiene sintaxis parecida a *C*
-
-### ¿Porque es importante este repaso?
-
-Las aplicaciones web actualmente están principalmente compuestas por estos 3 tipos de archivos para funcionar correctamente.
-
-Aunque los desarrolladores web utilicen *Typescript*, *Angular*, *Wordpress*, etc; al final del día estas herramientas transpilan sus lenguajes a estos 3 archivos para que funcione correctamente la página web.
-
 # HTTP
 
 > *HTTP* es un protocolo de aplicación mayormente utilizado para acceder a recursos en el *Internet*.
@@ -165,6 +78,18 @@ user=admin&pass=123456
 
 Al terminar la sección de **cabeceras**, obligatoriamente se espera un salto de línea (o línea vacía). Esto es totalmente necesario para validar la solicitud.
 
+#### Metodos de petición
+
+| Métodos     | Descripción                                                                                                                                                                                                                                                              |
+| ----------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **GET**     | Solicita un recurso específico. Puede transferir información adicional como parametros de la *URL*.                                                                                                                                                                      |
+| **POST**    | Envia información al servidor. Permite varios tipos de contenido como texto, PDF, información binaria.<br><br>Esta información se añade despues de los encabezados.<br><br>Este método es comúnmente usado, al enviar credenciales de un *login*, subir un archivo, etc. |
+| **HEAD**    | Solicita los encabezados de respuesta que serían devueltos al realizar una solicitud *GET*.                                                                                                                                                                              |
+| **PUT**     | Crea un nuevo recurso en el servidor. Por supuesto, es un método de alta importancia de seguridad.                                                                                                                                                                       |
+| **DELETE**  | Elimina un recurso del servidor web.                                                                                                                                                                                                                                     |
+| **OPTIONS** | Devuelve información sobre el servidor, como los métodos aceptados.                                                                                                                                                                                                      |
+| **PATCH**   | Aplica modificaciones parciales al recurso indicado.                                                                                                                                                                                                                     |
+
 ## Respuesta HTTP
 
 > Ya procesada la solicitud *HTTP*, se recibirá una respuesta con las siguientes componentes:
@@ -184,13 +109,89 @@ Content-Type: text/html
 Server: Apache/2.4.57 (Debian)
 
 <!DOCTYPE html>
-<html lang="es>
+<html lang="es">
 ...
 ```
 
-Los **códigos de respuesta** se utilizan para determinar de manera sencilla el estado de la solicitud.
+#### Códigos de respuesta
 
-El **cuerpo** de la respuesta, separado por el necesario salto de línea, es el recurso solicitado por la petición, ya sea un archivo *html*, *css*, *javascript*, imágenes, etc.
+> Las códigos de respuesta *HTTP* se utilizan para indicar al cliente el **estado** de la solicitud.
+
+| Tipo  | Descripción                                                                                    |
+| ----- | ---------------------------------------------------------------------------------------------- |
+| `1xx` | Provee información que no afecta el **estado final** de la solicitud.                          |
+| `2xx` | Códigos de éxito para cuando la solicitud fue procesada correctamente.                         |
+| `3xx` | Códigos de redirección, que indican al cliente a rehacer la solicitud según sea indicado.      |
+| `4xx` | Códigos de error **por parte del cliente**. Por ejemplo, solicitando una página que no existe. |
+| `5xx` | Códigos de error **por parte del servidor**.                                                   |
+
+## Encabezados HTTP
+
+> Antes mencionamos brevemente los **encabezados HTTP**, estas parejas de valores son utilizadas para intercambiar información importante entre el cliente y el servidor.
+
+Algunos encabezados son únicamente utilizados en peticiones o respuestas mientras que algunos están presentes en las ambas.
+
+Los encabezados se dividen principalmente en 5 categorías:
+
+#### Encabezados generales
+
+> **Encabezados** utilizados tanto en peticiones como respuestas. Es información referente al mensaje más que a su contenido.
+
+Por ejemplo:
+
+| Encabezado   | Ejemplo                               | Descripción                                                  |
+| ------------ | ------------------------------------- | ------------------------------------------------------------ |
+| `Date`       | `Date: Wed, 30 Dic 2024 10:38:42 CST` | Indica la fecha y hora de envío de la petición/respuesta.    |
+| `Connection` | `Connection: close`                   | Indica si la comunicación debe terminarse o mantenerse viva. |
+
+#### Encabezados de entidad
+
+> **Encabezados** utilizados en peticiones y respuestas, describen el contenido o recurso transferido en el mensaje, también denominado **entidad**.
+
+Usualmente encontrados en cualquier mensaje que transmita un recurso, y algunos ejemplos son:
+
+| Encabezado       | Ejemplo                       | Descripción                                                                                                                                            |
+| ---------------- | ----------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `Content-Type`   | `Content-Type: text/html`     | Encabezado utilizado para describir el tipo *MIME* de la **entidad** transferida.                                                                      |
+| `Content-Length` | `Content-Length: 385`         | Indica el tamaño de la entidad transferida.                                                                                                            |
+| `Media-Type`     | `Media-Type: application/pdf` | Etiqueta similar a `Content-Type`, posiblemente con un uso crucial en la interpretación por parte del servidor.                                        |
+| `Boundary`       | `boundary="b4e4fbd93540"`     | Indica el *"separador"* del contenido cuando se envía más de una entidad. Siguiendo el ejemplo, las entidades estarían separadas por `--b4e4fbd93540`. |
+| ...              | ...                           | ...                                                                                                                                                    |
+
+#### Encabezados de petición
+
+> Encabezados utilizados únicamente por **peticiones**, no se relacionan al contenido del mensaje si no a detalles de la **petición** misma.
+
+A continuación, ejemplos de este tipo de encabezados:
+
+| Encabezado      | Ejemplo                                  | Descripción                                                                                                                                                                |
+| --------------- | ---------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `Host`          | `Host: www.inlanefreight.com`            | Especifican el servidor al que deseamos conectarnos, ya sea mediante un **dominio** o **dirección IP**. Útiles cuando un mismo servidor, se encarga de múltiples dominios. |
+| `User-Agent`    | `User-Agent: curl/7.77.0`                | Describen el cliente mediante el cual se realiza la petición, usualmente un navegador web o herramienta como *cURL*.                                                       |
+| `Referer`       | `Referer: http://www.inlanefreight.com/` | Indican desde que sitio web se origino esta solicitud, en caso de haber uno.                                                                                               |
+| `Cookie`        | `Cookie: PHPSESSID=b4e4fbd93540`         | Indican las *cookies* presentes en la sesión.                                                                                                                              |
+| `Authorization` | `Authorization: BASIC cGFzc3dvcmQK`      | Indican el tipo de autenticación y las credenciales codificadas requeridas por el servidor.                                                                                |
+| `Accept`        | `Accept: */*`                            | Indica los tipos *MIME* separados por comas que el cliente puede interpretar. (`*/*` significa todos)                                                                      |
+
+#### Encabezados de respuesta
+
+> De manera análoga, son encabezados únicamente presentes en respuestas y tampoco se enfocan en el contenido del mensaje.
+
+| Encabezado         | Ejemplo                                     | Descripción                                                                                                             |
+| ------------------ | ------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
+| `Server`           | `Server: Apache/2.2.14 (Win32)`             | Contiene información sobre el servidor *HTTP* que procesa la solicitud, como software y versión.                        |
+| `Set-Cookie`       | `Set-Cookie: PHPSESSID=b4e4fbd93540`        | Fija las cookies requeridas por el servidor durante la sesión. Se espera que el cliente las indique en las solicitudes. |
+| `WWW-Authenticate` | `WWW-Authenticate: BASIC realm="localhost"` | Indica al cliente el tipo de autenticación requerida para el recurso solicitado.                                        |
+
+#### Encabezados de seguridad
+
+> Son **encabezados de respuesta** ***especiales*** que especifican ciertas reglas y políticas en favor de la seguridad de la aplicación web.
+
+| Encabezado                  | Ejemplo                                       | Descripción                                                                                                                                                                    |
+| --------------------------- | --------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `Content-Security-Policy`   | `Content-Security: script-src 'self'`         | Indica la politica del sitio web acerca de el procesamiento de recursos externos. En este ejemplo, se indica que se permiten unicamente scripts del propio sitio web y no más. |
+| `Strict-Transport-Security` | `Strict-Transport-Security: max-age=31536000` | Previene al navegador de acceder al sitio web mediante el protocolo *HTTP*, forzando la comunicación mediante *HTTPS*.                                                         |
+| `Referrer-Policy`           | `Referrer-Policy: origin`                     | Define si las peticiones **deben** incluir el encabezado `Referer`.                                                                                                            |
 
 ## Flujo HTTP
 
@@ -205,10 +206,6 @@ El siguiente diagrama entonces, hace referencia al primer contacto con un servid
 3. Con ese conocimiento, el cliente realiza una solicitud *HTTP* con la información de la *URL* al servidor con la dicha IP asignada.
 4. Entonces el servidor web, devuelve el recurso solicitado con un código de exito *200*.
 5. Finalmente, el navegador web renderiza la respuesta obtenida para ser recibida adecuadamente por el usuario.
-
-## Encabezados HTTP
-
-Antes mencionamos los **encabezados HTTP**
 
 # HTTPS
 
@@ -271,46 +268,6 @@ Existen muchas herramientas utilizadas para revisar aplicaciones *web*
 - *Escáneres* (Ej. Acunetix, nmap, wfuzz)
 - *Scripting* (Python requests)
 
-# Pruebas de penetración
-
-## Metodologías
-
-**Ejemplos**:
-- *OWASP testing Guides*
-- *Penetration Testing Execution standard*
-- Metodologías personales
-- Metodologías internas
-
-**Etapas**:
-- Planeación
-- Recolección de inteligencia / ==reconocimiento pasivo==
-- Reconocimiento activo
-- Análisis de vulnerabilidades
-- Explotación
-- Post-explotación
-- Reportes
-
-# Reconocimiento
-
-#### Reconocimiento pasivo
-
-Se lleva a cabo sin interactuar directamente con el objetivo (*OSINT*):
-
-- Subdominios (Ej. `dnsdumpster`)
-- Correos válidos (Ej. Hunter.io)
-- Versiones anteriores (Ej. web.archive.org)
-- Recursos indexados (Ej. *Google Dorks*)
-- Etc
-
-#### Reconocimiento activo
-
-Se lleva a cabo interactuando directamente con el objetivo, lo cual deja huella en las bitácoras.
-
-- Detección de tecnologías (*wappalyzer* : Detecta con que tecnologías se desarrolló un sitio web, *builtwith*)
-- Spidering (Ej. Zap, Burpsuite)
-- Forced Browsing (Ej. *WFuzz*, *gobuster*, *dirb*)
-- Detección de *Virtual hosts* (Ej. *WFuzz*)
-
 # Enlaces
 
-[Siguiente ->](HFC26_09_2024.md)
+[Siguiente ->](AplicacionWeb.md)
