--- a/HFC/WebHacking/apuntes/HFC26_09_2024.md
+++ b/HFC/WebHacking/apuntes/HFC26_09_2024.md
@@ -52,4 +52,4 @@ Una alternativa con más funciones desbloqueadas, es *zaproxy* una alternativa d
 
 # Enlaces
 
-[<- Anterior](HFC25_09_2024.md) | [Siguiente ->](HFC27_09_2024.md)
+[<- Anterior](AplicacionWeb.md) | [Siguiente ->](HFC27_09_2024.md)
