Función phi de Euler explicada

--- a/HFC/Crypto/apuntes/Crypto_30_01_2025.md
+++ b/HFC/Crypto/apuntes/Crypto_30_01_2025.md
@@ -102,6 +102,23 @@ En esta ocasión, la relación es **biyectiva** y es posible descifrar la *M* a 
 
 Ya sabiendo el requisito para esta encriptación, podemos apoyarnos de la función $\phi$ (*phi*) de *Euler* para identificar todas las posibles llaves que posee un alfabeto de longitud $n$.
 
+Esta se basa en 4 propiedades esenciales:
+
+$\varphi(1) = 1$
+$\varphi(p) = p-1$ siempre que $p$ sea un número primo.
+$\varphi(p^{k})=(p-1)p^{k-1}$ si $p$ es primo y $k$ un número natural
+$\varphi$ es una función multiplicativa, es decir, $\varphi(mn) = \varphi(m)\varphi(n)$
+
+Entonces para cualquier número $n$, que expresable como producto de números primos $p_{1}^{k_{1}} \cdot p_{2}^{k_{2}} \cdots p_{r}^{k_{r}}$, la función $\varphi$ se calcula como:
+
+$\varphi(n) = (p_{1}-1)p_{1}^{k_{1}-1} \cdot (p_{2} -1)p_{2}^{k_{2}-1}\cdots (p_{r}-1)p_{r}^{k_{r}-1}$
+
+Que puede rescribirse de la forma conocida como **Fórmula de Producto de Euler** como:
+
+$$
+\displaystyle \varphi(n) = n \prod_{p|n}\left( 1-\frac{1}{p} \right)
+$$
+
 # Enlaces
 
 [<- Anterior](Crypto_29_01_2025.md) |
