Cripto y Móviles al dia

--- a/HFC/Crypto/apuntes/Crypto_30_01_2025.md
+++ b/HFC/Crypto/apuntes/Crypto_30_01_2025.md
@@ -121,4 +121,4 @@ $$
 
 # Enlaces
 
-[<- Anterior](Crypto_29_01_2025.md) |
+[<- Anterior](Crypto_29_01_2025.md) | [Siguiente ->](Crypto_04_02_2025.md)
