--- a/Compiladores/apuntes/Compi_30_01_2025.md
+++ b/Compiladores/apuntes/Compi_30_01_2025.md
@@ -1,6 +1,74 @@
 [<- Índice](../Compiladores.md)
 # Sistema de procesamiento de lenguaje
 
+```mermaid
+---
+title: Procesamiento del lenguaje
+---
+flowchart TB
+	start["Inicio"]
+	prep["Preprocesador"]
+	comp["Compilador"]
+	ens["Ensamblador"]
+	lib["Archivos objeto de biblioteca"]
+	ld["Enlazador/Cargador"]
+	start --Programa Fuente--> prep
+	prep --Programa Fuente sin directivas de preprocesamiento--> comp
+	comp --Programa objeto en lenguaje ensamblador--> ens
+	ens --Código máquina relocalizable--> ld 
+	lib --> ld
+	ld --Programa ejecutable--> fin["Usuario"]
+```
+
+- El ***preprocesador*** se encarga de eliminar *directivas de preprocesamiento*, como lo son la inclusión de bibliotecas, la definición de macros, compilación condicional, etc.
+- El ***compilador*** realiza una traducción a programa objeto en **lenguaje ensamblador**.
+- El ***ensamblador*** transforma este programa objeto a **código máquina relocalizable**.
+- El ***enlazador*** agrupa los programas objetos resultantes en un solo archivo y el ***cargador*** asigna las direcciones de memoria definitivas al código.
+
+### Fases de compilación
+
+```mermaid
+---
+title: Fases de compilación
+---
+
+flowchart TB
+	inicio["Inicio"]
+	lex["Análisis léxico"]
+	sint["Análisis sintáctico"]
+	semant["Análisis semántico"]
+	inter["Generación de código intermedio"]
+	optim["Optimización de código intermedio"]
+	obj["Generación de código objeto"]
+	optimobj["Optimización de código objeto"]
+	errores["Manejador de errores"]
+	simbolos["Tabla de símbolos"]
+	tipos["Tabla de tipos"]
+	user["Usuario"]
+	inicio --"Programa Fuente"--> lex
+	lex --Tokens--> sint
+	sint --"Árbol sintáctico"--> semant
+	semant --"Árbol sintáctico anotado"--> inter
+	inter --"Código intermedio"--> optim
+	optim --"Código intermedio"--> obj
+	obj --"Código objeto"--> optimobj
+	optimobj --"Código objeto"--> user
+	errores <----> lex
+	errores <----> sint
+	errores <----> semant
+	errores <----> inter
+	errores <----> optim
+	errores <----> obj
+	errores <----> optimobj
+	simbolos <----> lex
+	simbolos <----> sint
+	simbolos <----> semant
+	simbolos <----> inter
+	simbolos <----> optim
+	simbolos <----> obj
+	simbolos <----> optimobj
+```
+
 # Enlaces
 
 [<- Anterior](Compi_29_01_2025.md) |
